PROJECT (CairoChart C)

CMAKE_MINIMUM_REQUIRED (VERSION 2.8)

SET (PROJECT_LOWERCASE_NAME "cairo-chart")
SET (PROJECT_DESCRIPTION "GtkChart for Gtk.DrawingArea (Cairo).")

SET (MAJOR 0)
SET (MINOR 2)
SET (PATCH 0)

LIST (APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake/backbone)

ADD_SUBDIRECTORY (src)
ADD_SUBDIRECTORY (po)
ADD_SUBDIRECTORY (pkg-config)
ADD_SUBDIRECTORY (test)
ADD_SUBDIRECTORY (cpack)

# enable testing
#ENABLE_TESTING ()
